@@ -5,7 +5,7 @@ define('PKG_NAME','pdoTools');
 define('PKG_NAME_LOWER',strtolower(PKG_NAME));
 
 define('PKG_VERSION','1.9.0');
-define('PKG_RELEASE','beta1');
+define('PKG_RELEASE','rc');
 define('PKG_AUTO_INSTALL', true);
 
 
